# PyOfficeRobot

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
PR/Dumogu/: WeChatType.py
PR/tang/: weixin_version.py
PyOfficeRobot/: __init__.py
PyOfficeRobot/api/: chat.py  file.py  friend.py  group.py  test.py
PyOfficeRobot/core/: Pdbot.py  WeChatType.py
PyOfficeRobot/core/group/: Start.py  ui_file_py.py
PyOfficeRobot/lib/: CONST.py
PyOfficeRobot/lib/dec/: act_dec.py
demo/: 001-message.py  001-发一条信息.py  002-chat.py  002-发文件.py  003-file.py  003-根据关键词回复.py  004-定时发送.py  004-根据关键词回复.py  005-chat.py  005-自定义功能.py  006-独立版本.py  007-收集群消息.py  008-发消息换行.py  009-批量加好友.py  010-定时群发.py  011-chat_chatgpt.py  012-智能聊天.py  012、智能聊天.py  013-阿里大模型.py  014-智谱大模型.py  015-DeepSeek大模型.py  06-定时.py  07-getList.py  08-new_line.py  10-批量加好友.py  12、智能聊天.py  @AutomationLog.txt  bot.py  demo.py  wxbot.py  微信群信息采集.xlsx
demo/11-定时群发/: 11-定时群发.py  content.txt  群发对象.xls
demo/tools/: img.py
dev/: @AutomationLog.txt  another_test1.py  get-msg.py  others.py  test.py  开发记录.md  收集群消息.py
dev/contributor/tang/: test_copy.py  (+1 more)
dev/liubiao/: requirements.txt
dev/关键字自动回复/: keywords_data.csv
dev/微信群信息收集/: main.py
docs/文章配图/: img.py
examples/demo/: 001-发一条信息.py  002-发文件.py  003-根据关键词回复.py  004-定时发送.py  005-自定义功能.py  006-独立版本.py  007-收集群消息.py  008-发消息换行.py  012-智能聊天.py  013-阿里大模型.py  014-智谱大模型.py  015-DeepSeek大模型.py  @AutomationLog.txt
examples/dev/: another_test1.py  test.py  userMessage.txt  收集群消息.py
script/: allpackages.txt  clean.sh  upload.sh
tests/: @AutomationLog.txt  __init__.py  chat.py  test_file.py  test_group.py  userMessage.txt
tests/test_code/: test_file.py
(+3 files in other folders)
